--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Onion Soup Recipe</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     French Onion Soup We have been trying French onion soup in restaurants for years and my family and friends agree
