--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -6,7 +6,14 @@
     <title>French Onion Soup Recipe</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
+
+
   <body>
+    
+  <header>
+    <img src="images/soup.jpg" alt="Soup"/>
+  </header>
+
     French Onion Soup We have been trying French onion soup in restaurants for years and my family and friends agree
     none can compare to my recipe for taste and simplicity of preparation. Ingredients 1/2 cup unsalted butter 2
     tablespoons olive oil 4 cups sliced onions 4 (10.5 ounce) cans beef broth 2 tablespoons dry sherry (optional) 1
