--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -16,15 +16,34 @@
   </header>
 
   <section>
-    We have been trying French onion soup in restaurants for years and my family and friends agree
-    none can compare to my recipe for taste and simplicity of preparation. 
+    <p>We have been trying French onion soup in restaurants for years and my family and friends agree
+    none can compare to my recipe for taste and simplicity of preparation.</p>
+
+    <img src="./images/cooking-info.png" alt="cooking"/>
+  
   </section>
+  
   <hr>
   <section>
-    Ingredients 1/2 cup unsalted butter 2
-    tablespoons olive oil 4 cups sliced onions 4 (10.5 ounce) cans beef broth 2 tablespoons dry sherry (optional) 1
-    teaspoon dried thyme salt and pepper to taste 4 slices French bread 4 slices provolone cheese 2 slices Swiss cheese,
-    diced 1/4 cup grated Parmesan cheese 
+    
+    <ul> 
+      <li>1/2 cup unsalted butter</li>  
+      <li>tablespoons olive oil</li>  
+      <li>cups sliced onions</li>  
+      <li>4 (10.5 ounce) cans beef broth</li> 
+      <li>2 tablespoons dry sherry (optional)</li> 
+      <li>1 teaspoon dried thyme </li>
+      <li>salt and pepper to taste </li>
+      <li>4 slices French bread </li>
+      <li>4 slices provolone cheese </li>
+      <li>2 slices Swiss cheese, diced </li>
+      <li>1/4 cup grated Parmesan cheese.</li>
+    </ul>
+   
+    <br>
+
+    <img src="./images/recipe-info.png" alt="recipe"/>
+
   </section>
   <hr>
   <section>
