--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -19,14 +19,14 @@
     <p>We have been trying French onion soup in restaurants for years and my family and friends agree
     none can compare to my recipe for taste and simplicity of preparation.</p>
 
-    <img src="./images/cooking-info.png" alt="cooking"/>
+    <img class="about" src="./images/cooking-info.png" alt="cooking"/>
   
   </section>
   
   <hr>
   <section>
-    
-    <ul> 
+    Ingredients
+    <ul>
       <li>1/2 cup unsalted butter</li>  
       <li>tablespoons olive oil</li>  
       <li>cups sliced onions</li>  
@@ -42,17 +42,21 @@
    
     <br>
 
-    <img src="./images/recipe-info.png" alt="recipe"/>
+    <img class="about" src="./images/recipe-info.png" alt="recipe"/>
 
   </section>
   <hr>
   <section>
-  Directions Melt butter with olive oil in an 8 quart stock pot on medium heat.
-    Add onions and continually stir until tender and translucent. Do not brown the onions. Add beef broth, sherry and
-    thyme. Season with salt and pepper, and simmer for 30 minutes. Heat the oven broiler. Ladle soup into oven safe
-    serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). Layer
-    each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. Place bowls
-    on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.
+   
+  <h2>Directions</h2> 
+  <ol>
+  <li>Melt butter with olive oil in an 8 quart stock pot on medium heat.</li>
+    <li>Add onions and continually stir until tender and translucent. Do not brown the onions. </li>
+    <li>Add beef broth, sherry and thyme. Season with salt and pepper, and simmer for 30 minutes.</li> 
+    <li>Heat the oven broiler. Ladle soup into oven safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). </li>
+    <li>Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. </li>
+    <li>Place bowls on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.</li>
+  </ol>
   </section>
   </body>
 </html>
