--- a/french-soup/index.html
+++ b/french-soup/index.html
@@ -4,59 +4,86 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>French Onion Soup Recipe</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
 
-
   <body>
-    
-  <header>
-    <img src="images/soup.jpg" alt="Soup"/>
-    <h1>French Onion Soup</h1> 
-  </header>
+    <header>
+      <img src="images/soup.jpeg" alt="Soup" />
+      <h1>French Onion Soup</h1>
+    </header>
 
-  <section>
-    <p>We have been trying French onion soup in restaurants for years and my family and friends agree
-    none can compare to my recipe for taste and simplicity of preparation.</p>
+    <section>
+      <p>
+        We have been trying French onion soup in restaurants for years and my
+        family and friends agree none can compare to my recipe for taste and
+        simplicity of preparation.
+      </p>
 
-    <img class="about" src="./images/cooking-info.png" alt="cooking"/>
-  
-  </section>
-  
-  <hr>
-  <section>
-    Ingredients
-    <ul>
-      <li>1/2 cup unsalted butter</li>  
-      <li>tablespoons olive oil</li>  
-      <li>cups sliced onions</li>  
-      <li>4 (10.5 ounce) cans beef broth</li> 
-      <li>2 tablespoons dry sherry (optional)</li> 
-      <li>1 teaspoon dried thyme </li>
-      <li>salt and pepper to taste </li>
-      <li>4 slices French bread </li>
-      <li>4 slices provolone cheese </li>
-      <li>2 slices Swiss cheese, diced </li>
-      <li>1/4 cup grated Parmesan cheese.</li>
-    </ul>
-   
-    <br>
+      <img
+        class="about"
+        id="cookingInfo"
+        src="./images/cooking-info (1).png"
+        alt="cooking"
+      />
+    </section>
 
-    <img class="about" src="./images/recipe-info.png" alt="recipe"/>
+    <hr />
+    <section>
+      Ingredients
+      <ul>
+        <li>1/2 cup unsalted butter</li>
+        <li>tablespoons olive oil</li>
+        <li>cups sliced onions</li>
+        <li>4 (10.5 ounce) cans beef broth</li>
+        <li>2 tablespoons dry sherry (optional)</li>
+        <li>1 teaspoon dried thyme</li>
+        <li>salt and pepper to taste</li>
+        xs
+        <li>4 slices French bread</li>
+        <li>4 slices provolone cheese</li>
+        <li>2 slices Swiss cheese, diced</li>
+        <li>1/4 cup grated Parmesan cheese.</li>
+      </ul>
 
-  </section>
-  <hr>
-  <section>
-   
-  <h2>Directions</h2> 
-  <ol>
-  <li>Melt butter with olive oil in an 8 quart stock pot on medium heat.</li>
-    <li>Add onions and continually stir until tender and translucent. Do not brown the onions. </li>
-    <li>Add beef broth, sherry and thyme. Season with salt and pepper, and simmer for 30 minutes.</li> 
-    <li>Heat the oven broiler. Ladle soup into oven safe serving bowls and place one slice of bread on top of each (bread may be broken into pieces if you prefer). </li>
-    <li>Layer each slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1 tablespoon Parmesan cheese. </li>
-    <li>Place bowls on cookie sheet and broil in the preheated oven until cheese bubbles and browns slightly.</li>
-  </ol>
-  </section>
+      <br />
+
+      <img
+        class="about"
+        id="recipeInfo"
+        src="./images/recipe-info.png"
+        alt="recipe"
+      />
+    </section>
+    <hr />
+    <section>
+      <h2>Directions</h2>
+      <ol>
+        <li>
+          Melt butter with olive oil in an 8 quart stock pot on medium heat.
+        </li>
+        <li>
+          Add onions and continually stir until tender and translucent. Do not
+          brown the onions.
+        </li>
+        <li>
+          Add beef broth, sherry and thyme. Season with salt and pepper, and
+          simmer for 30 minutes.
+        </li>
+        <li>
+          Heat the oven broiler. Ladle soup into oven safe serving bowls and
+          place one slice of bread on top of each (bread may be broken into
+          pieces if you prefer).
+        </li>
+        <li>
+          Layer each slice of bread with a slice of provolone, 1/2 slice diced
+          Swiss and 1 tablespoon Parmesan cheese.
+        </li>
+        <li>
+          Place bowls on cookie sheet and broil in the preheated oven until
+          cheese bubbles and browns slightly.
+        </li>
+      </ol>
+    </section>
   </body>
 </html>
